refactor: update using lease entity
