# internal/adapter/order/restful/api/v1/v1.go
@@ -2,7 +2,7 @@ package v1
 
 import (
 	"github.com/blackhorseya/irent/internal/adapter/order/restful/api/v1/arrears"
-	"github.com/blackhorseya/irent/internal/adapter/order/restful/api/v1/bookings"
+	"github.com/blackhorseya/irent/internal/adapter/order/restful/api/v1/orders"
 	ab "github.com/blackhorseya/irent/pkg/entity/domain/account/biz"
 	ob "github.com/blackhorseya/irent/pkg/entity/domain/order/biz"
 	"github.com/blackhorseya/irent/pkg/httpheaders"
@@ -11,5 +11,5 @@ import (
 
 func Handle(g *gin.RouterGroup, biz ob.IBiz, auth ab.IBiz) {
 	arrears.Handle(g.Group("/arrears"), biz, auth)
-	bookings.Handle(g.Group("/bookings", httpheaders.AddRequiredAuthMiddleware()), biz, auth)
+	orders.Handle(g.Group("/orders", httpheaders.AddRequiredAuthMiddleware()), biz, auth)
 }
